--- a/src/app/components/CompanyProjects.css
+++ b/src/app/components/CompanyProjects.css
@@ -143,6 +143,7 @@
         align-items: center;
         margin-left: 10%;
         padding-top: 100px;
+        margin-right: 10%;
     }
 
     .card {
@@ -170,6 +171,7 @@
         align-items: center;
         margin-left: 10%;
         padding-top: 100px;
+        margin-right: 10%;
     }
 
     .card {
