--- a/src/app/components/MyProjects.css
+++ b/src/app/components/MyProjects.css
@@ -9,6 +9,7 @@
     justify-content: center;
     gap: 50px;
     color: #2F4F4F;
+    
 }
 
 .card {
@@ -146,6 +147,7 @@
         align-items: center;
         margin-left: 10%;
         padding-top: 100px;
+        margin-right: 10%;
     }
 
     .card {
@@ -172,6 +174,7 @@
         flex-direction: column;
         align-items: center;
         margin-left: 10%;
+        margin-right: 10%;
         padding-top: 100px;
     }
 
